package com.livefyre.protobuf.rpc.examples;

option py_generic_services = true;
option java_generic_services = true;

message SearchRequest
{
   required string query = 2;
}

message SearchResponse
{
  required string response = 1;
}

service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
}
